--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,69 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+body {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  background-color: #34495e;
+  font-family: "Poppins", sans-serif;
+}
+.container {
+  height: 325px;
+  border: 5px solid #1abc9c;
+  box-shadow: 0 0 50px rgba(0, 240, 240, 0.3),
+    0 0 px rgba(0, 240, 240, 0.3) inset;
+  width: 325px;
+  color: #fff;
+  border-radius: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* animation: pulsate 1s infinite; */
+}
+.time {
+  font-size: 50px;
+  letter-spacing: 3px;
+  text-align: center;
+}
+.blink-text {
+  animation: blink 1s infinite;
 }
 
-.App-link {
-  color: #61dafb;
+.time > span,
+.date > span {
+  margin: 0px 3px;
+  word-spacing: 3px;
+}
+.date {
+  text-align: center;
+  font-size: 20px;
+  font-weight: 200;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes pulsate {
+  0% {
+    border: 3px solid red;
   }
-  to {
-    transform: rotate(360deg);
+  25% {
+    border: 3px solid blue;
+  }
+  75% {
+    border: 3px solid green;
+  }
+}
+@keyframes blink {
+  0% {
+    opacity: 100%;
+  }
+  50% {
+    opacity: 50%;
+  }
+  10% {
+    opacity: 100%;
   }
 }
